--- a/calendarbooking/CalendarBookingProject/CalendarBookingProject/Views/Shared/_Layout.cshtml
+++ b/calendarbooking/CalendarBookingProject/CalendarBookingProject/Views/Shared/_Layout.cshtml
@@ -31,12 +31,13 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Calendar Booking</p>
         </footer>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+    @RenderSection("Styles", required: false)
 </body>
 </html>
