--- a/calendarbooking/CalendarBookingProject/CalendarBookingProject/Content/Login.css
+++ b/calendarbooking/CalendarBookingProject/CalendarBookingProject/Content/Login.css
@@ -63,3 +63,15 @@ h2 {
 	margin-left: 3rem;
 	margin-right: 3rem;
 }
+
+.errors {
+    position: absolute;
+    left: 0;
+    color: red;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+li {
+    list-style: none;
+}
