--- a/calendarbooking/CalendarBookingProject/CalendarBookingProject/Views/Account/Index.cshtml
+++ b/calendarbooking/CalendarBookingProject/CalendarBookingProject/Views/Account/Index.cshtml
@@ -8,14 +8,15 @@
     <div class="container">
         <span class="glyphicon glyphicon-list-alt"></span>
         <h2>Calendar</h2>
+        <div class="errors">
+            @Html.ValidationSummary()
+        </div>
         <div class="box">
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = "" }))
             {
                 @Html.AntiForgeryToken()
                 @Html.TextBoxFor(m => m.Username, new { @placeholder = "Username" })
-                @Html.ValidationMessageFor(m => m.Username, "", new { @class = "error-message" })
                 @Html.PasswordFor(m => m.Password, new { @placeholder = "Password" })
-                @Html.ValidationMessageFor(m => m.Password, "", new { @class = "error-message" })
                 
                 <button class="btn btn-default full-width"><span class="glyphicon glyphicon-ok"></span></button>
             }
